--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon.ico">
-    <title>Колесо Удачи</title>
+    <title>VitePack</title>
     <script type="module" crossorigin src="./js/index.js"></script>
     <link rel="stylesheet" href="./css/index.css">
 </head>
@@ -14,6 +14,23 @@
 <body>
     <div class="wrapper">
         <header class="header">
+            <!-- <div class="menu-body">
+                <div class="overlay"></div>
+                <nav class="menu" id="menu">
+                    <div class="menu-mobile-header">
+                        <button type="button" class="menu-mobile-close"><i class="ion _icon-close"></i></button>
+                    </div>
+                    <ul class="menu-list">
+                        <li class="menu-item menu-item-home"><a href="#" class="menu-link" data-goto=".header">Home</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".impact">Specials</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".customers">Estimates</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".gallery">Reviews</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".impact">Specials</a></li>
+                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".about">About</a></li>
+                    </ul>
+                </nav>
+                <button type="button" class="menu-mobile-toggle icon-change"></button>
+            </div> -->
         </header>
         <main class="main">
             <div class="main__container">
@@ -44,7 +61,8 @@
                                     placeholder="Ваш номер телефона">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="prize__input" name="user__gift" value="" />
+                                <input type="text" class="prize__input" style="display:none;" name="user__gift"
+                                    value="" />
                                 <button type="submit" class="button">Забрать подарок</button>
                             </div>
                             <div class="checkbox">
@@ -57,7 +75,9 @@
                             </div>
                         </form>
                     </div>
+
                 </div>
+
         </main>
         <footer class="footer">
         </footer>
