--- a/index.html
+++ b/index.html
@@ -7,33 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/favicon.ico">
     <title>VitePack</title>
-    <script type="module" crossorigin src="./js/index.js"></script>
-    <link rel="stylesheet" href="./css/index.css">
+  <script type="module" crossorigin src="./js/index.js"></script>
+  <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
     <div class="wrapper">
-        <header class="header">
-            <!-- <div class="menu-body">
-                <div class="overlay"></div>
-                <nav class="menu" id="menu">
-                    <div class="menu-mobile-header">
-                        <button type="button" class="menu-mobile-close"><i class="ion _icon-close"></i></button>
-                    </div>
-                    <ul class="menu-list">
-                        <li class="menu-item menu-item-home"><a href="#" class="menu-link" data-goto=".header">Home</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".impact">Specials</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".customers">Estimates</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".gallery">Reviews</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".impact">Specials</a></li>
-                        <li class="menu-item"><a href="#" class="menu-link" data-goto=".about">About</a></li>
-                    </ul>
-                </nav>
-                <button type="button" class="menu-mobile-toggle icon-change"></button>
-            </div> -->
-        </header>
         <main class="main">
+            <div class="main-button">
+                <button type="submit" class="button btn-luckyWheel">Испытать удачу</button>
+            </div>
             <div class="main__container">
+
                 <div class="spin-wrapper">
                     <div class="deal-wheel-wrapper">
                         <div class="deal-wheel">
@@ -61,8 +46,7 @@
                                     placeholder="Ваш номер телефона">
                             </div>
                             <div class="form-group">
-                                <input type="text" class="prize__input" style="display:none;" name="user__gift"
-                                    value="" />
+                                <input type="text" class="prize__input" name="user__gift" value="" />
                                 <button type="submit" class="button">Забрать подарок</button>
                             </div>
                             <div class="checkbox">
@@ -79,12 +63,9 @@
                 </div>
 
         </main>
-        <footer class="footer">
-        </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js"
-        type="text/javascript"></script>
-</body>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
+    </body>
 
 </html>
